we need to add the environment variable to psql so we can restart in persisted mode

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ services:
   stellar:
     build:
      context: ./stellar 
-    image: "chinkitp/stellar"
+    image: chinkitp/stellar:latest
     volumes: 
-    - ./data:/opt/stellar
+    - "./data:/opt/stellar"
+    environment:
+      - POSTGRES_PASSWORD=mypass123
+      - PGPASS=mypass123
