--- a/stellar/common/horizon/etc/horizon.env
+++ b/stellar/common/horizon/etc/horizon.env
@@ -1,7 +1,7 @@
 #!/bin/bash
 
-export DATABASE_URL="postgres://stellar:__PGPASS__@localhost/horizon"
-export STELLAR_CORE_DATABASE_URL="postgres://stellar:__PGPASS__@localhost/core"
+export DATABASE_URL="postgres://stellar:__PGPASS__@stellar-db/horizon"
+export STELLAR_CORE_DATABASE_URL="postgres://stellar:__PGPASS__@stellar-db/core"
 export STELLAR_CORE_URL="http://localhost:11626"
 export LOG_LEVEL="info"
 export INGEST="true"
