--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
   stellar-db:
     build:
      context: ./stellar-db
-    image: chinkitp/stellar:latest
+    image: chinkitp/stellar-db:latest
     volumes: 
     - "./data-db:/opt/stellar"
     environment:
@@ -20,15 +20,15 @@ services:
       - PGPASS=mypass123
       - NETWORK=pubnet
 
-  # stellar:
-  #   build:
-  #    context: ./stellar 
-  #   image: chinkitp/stellar:latest
-  #   volumes: 
-  #   - "./data:/opt/stellar"
-  #   environment:
-  #     - POSTGRES_PASSWORD=mypass123
-  #     - PGPASS=mypass123
-  #     - NETWORK=pubnet
-  #   depends_on:
-  #     - "stellar-db"
+  stellar:
+    build:
+     context: ./stellar 
+    image: chinkitp/stellar:latest
+    volumes: 
+    - "./data:/opt/stellar"
+    environment:
+      - POSTGRES_PASSWORD=mypass123
+      - PGPASS=mypass123
+      - NETWORK=pubnet
+    depends_on:
+      - "stellar-db"
